--- a/portfolio.html
+++ b/portfolio.html
@@ -191,6 +191,7 @@
                 alt="Ноутбук"
                 width="370"
                 height="294"
+                class="anim-foto"
               />
               </div>
               
