--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
       <section class="section-slogan"> 
         <div class="container">
           <h1 class="main-title" >Эффективные решения <br> для вашего бизнеса</h1>
-          <button type="button" class="button-studio">Заказать услугу</button>
+          <button type="button" class="button-studio" data-modal-open>Заказать услугу</button>
         </div>
       </section>
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button data-modal-close class="close-menu">Закрыть окно</button>
+        </div>
+      </div>
+      
       <section class="section">
         <div class="container ">
           <h2 class="section-title">Информация</h2>
@@ -81,7 +87,7 @@
               <div class="icon-info-block">
                 <svg class="icon-info" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagrama"></use>
-                </svg>
+                </svg>  
               </div>
               <h3 class="subtitles-studio">Планирование</h3>
               <p class="description-studio">
@@ -407,5 +413,6 @@
           </ul>
       </div>
   </footer>
+  <script src="./js/modal.js"></script>
   </body>
 </html>
