--- a/index.html
+++ b/index.html
@@ -311,45 +311,53 @@
           <h2 class="img-title"> Постоянные клиенты</h2>
           <ul class="client-list">
             <li class="client-list-item">
-              <div class="client-list-block">
+              <a class="client-link">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-client1">
                   </use>
                 </svg>
-              </div></li>
-            <li class="client-list-item">
-              <div class="client-list-block">
-                <svg class="client-icon">
-                  <use href="./images/icons.svg#icon-client2">
-                  </use>
-                </svg>
-              </div></li>
-            <li class="client-list-item">
-              <div class="client-list-block">
-                <svg class="client-icon">
-                  <use href="./images/icons.svg#icon-client3">
-                  </use>
-                </svg>
-              </div></li>
-            <li class="client-list-item"><div class="client-list-block">
+              </a>
+            </li>
+          <li class="client-list-item">
+            <a class="client-link">
+              <svg class="client-icon">
+                <use href="./images/icons.svg#icon-client2">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="client-list-item">
+          <a class="client-link">
+            <svg class="client-icon">
+              <use href="./images/icons.svg#icon-client3">
+              </use>
+            </svg>
+          </a>
+          </li>
+          <li class="client-list-item">
+            <a class="client-link">
               <svg class="client-icon">
                 <use href="./images/icons.svg#icon-client4">
                 </use>
               </svg>
-              </div></li>
+            </a>
+          </li>
             <li class="client-list-item"> 
-              <div class="client-list-block">
+              <a class="client-link">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-client5">
                   </use>
                 </svg>
-            </div></li>
-            <li class="client-list-item"><div class="client-list-block">
+              </a>
+          </li>
+          <li class="client-list-item">
+            <a class="client-link">
               <svg class="client-icon">
                 <use href="./images/icons.svg#icon-client6">
                 </use>
               </svg>
-            </div></li>
+            </a>
+        </li>
           </ul>
         </div>
       </section>
