--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     <header class="header">
       <div class="container header-container">
         <nav class="nav">
-          <a href="" class="logo">Web<span class="logo2">Studio</span></a>
-        <ul class="header-list">
-          <li class="header-li"><a href="./index.html" class="header-link current">Студия</a></li>
-          <li class="header-li">
-            <a href="./portfolio.html" class="header-link ">Портфолио </a>
+          <a href="" class="nav-logo">Web<span class="nav-logo2">Studio</span></a>
+        <ul class="site-nav">
+          <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a></li>
+          <li class="site-nav__item">
+            <a href="./portfolio.html" class="site-nav__link ">Портфолио </a>
           </li >
-          <li class="header-li"><a href="" class="header-link"> Контакты </a></li>
+          <li class="site-nav__item"><a href="" class="site-nav__link"> Контакты </a></li>
         </ul>
       </nav>
         <ul class="contacts-list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="contacts-link"> 
-              <svg class="mail" width="20" height="20">
+          <li class="contacts-list__item">
+            <a href="mailto:info@devstudio.com" class="contacts-list__link"> 
+              <svg class="contacts-list__link--mail" width="20" height="20">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>info@devstudio.com
             </a>
           </li >
-          <li class="item">
-            <a href="tel:+380961111111" class="contacts-link"
-              ><svg class="phone" width="20" height="20">
+          <li class="contacts-list__item">
+            <a href="tel:+380961111111" class="contacts-list__link"
+              ><svg class="contacts-list__link--phone" width="20" height="20">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg> +38 096 111 11 11</a
             >
@@ -152,36 +152,36 @@
             <div class="teams-container">
             <h3 class="img-names">Игорь Демьяненко</h3>
             <p class="img-activity">Product Designer</p>
-            </div>
             <ul class="social">
               <li class="social-item">
-                <a class="social-link">
+                <a class="social-link " href="">
                   <svg class="social-icon">
                     <use href="./images/icons.svg#icon-instagram">
                     </use>
                   </svg>
                 </a>
               </li>
-              <li class="social-item"> <a class="social-link">
+              <li class="social-item"> <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-twitter">
                   </use>
                 </svg>
               </a></li>
               <li class="social-item">
-                <a class="social-link">
+                <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-facebook">
                   </use>
                 </svg>
               </a></li>
-              <li class="social-item"> <a class="social-link">
+              <li class="social-item"> <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-linkedin">
                   </use>
                 </svg>
               </a></li>
             </ul>
+            </div>
           </li>
           <li class="team-fotos-list">
             <img
@@ -192,76 +192,76 @@
             <div class="teams-container">
             <h3 class="img-names">Ольга Репина</h3>
             <p class="img-activity">Frontend Developer</p>  
-            </div>
             <ul class="social">
               <li class="social-item">
-                <a class="social-link">
+                <a class="social-link" href="">
                   <svg class="social-icon">
                     <use href="./images/icons.svg#icon-instagram">
                     </use>
                   </svg>
                 </a>
               </li>
-              <li class="social-item"> <a class="social-link">
+              <li class="social-item"> <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-twitter">
                   </use>
                 </svg>
               </a></li>
               <li class="social-item">
-                <a class="social-link">
+                <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-facebook">
                   </use>
                 </svg>
               </a></li>
-              <li class="social-item"> <a class="social-link">
+              <li class="social-item"> <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-linkedin">
                   </use>
                 </svg>
               </a></li>
             </ul>
+            </div>
           </li>
           <li class="team-fotos-list">
             <img
               src="./images/h3.jpg"
-              alt="Фото парня в рубашке  "
+              alt="Фото парня в рубашке"
               width="270"
             />
             <div class="teams-container">
             <h3 class="img-names">Николай Тарасов</h3>
             <p class="img-activity">Marketing</p>  
-            </div>
             <ul class="social">
               <li class="social-item">
-                <a class="social-link">
+                <a class="social-link" href="">
                   <svg class="social-icon">
-                    <use href="./images/icons.svg#icon-instagram">
+                    <use href="./images/icons.svg#icon-instagram" >
                     </use>
                   </svg>
                 </a>
               </li>
-              <li class="social-item"> <a class="social-link">
+              <li class="social-item"> <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-twitter">
                   </use>
                 </svg>
               </a></li>
               <li class="social-item">
-                <a class="social-link">
+                <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-facebook">
                   </use>
                 </svg>
               </a></li>
-              <li class="social-item"> <a class="social-link">
+              <li class="social-item"> <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-linkedin">
                   </use>
                 </svg>
               </a></li>
             </ul>
+            </div>
           </li>
           <li class="team-fotos-list">
             <img
@@ -272,30 +272,29 @@
             <div class="teams-container">
             <h3 class="img-names">Михаил Ермаков</h3>
             <p class="img-activity">UI Designer</p>  
-            </div>
             <ul class="social">
               <li class="social-item">
-                <a class="social-link">
+                <a class="social-link" href="">
                   <svg class="social-icon">
-                    <use href="./images/icons.svg#icon-instagram">
+                    <use href="./images/icons.svg#icon-instagram" >
                     </use>
                   </svg>
                 </a>
               </li>
-              <li class="social-item"> <a class="social-link">
+              <li class="social-item"> <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-twitter">
                   </use>
                 </svg>
               </a></li>
               <li class="social-item">
-                <a class="social-link">
+                <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-facebook">
                   </use>
                 </svg>
               </a></li>
-              <li class="social-item"> <a class="social-link">
+              <li class="social-item"> <a class="social-link" href="">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#icon-linkedin">
                   </use>
@@ -304,6 +303,7 @@
             </ul>
           </li>
         </ul>
+            </div>
       </div>
       </section>
       <section class="client section">
@@ -311,7 +311,7 @@
           <h2 class="img-title"> Постоянные клиенты</h2>
           <ul class="client-list">
             <li class="client-list-item">
-              <a class="client-link">
+              <a class="client-link" href="">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-client1">
                   </use>
@@ -319,7 +319,7 @@
               </a>
             </li>
           <li class="client-list-item">
-            <a class="client-link">
+            <a class="client-link" href="">
               <svg class="client-icon">
                 <use href="./images/icons.svg#icon-client2">
                 </use>
@@ -327,15 +327,15 @@
             </a>
           </li>
           <li class="client-list-item">
-          <a class="client-link">
-            <svg class="client-icon">
+          <a class="client-link" href="">
+            <svg class="client-icon" >
               <use href="./images/icons.svg#icon-client3">
               </use>
             </svg>
           </a>
           </li>
           <li class="client-list-item">
-            <a class="client-link">
+            <a class="client-link" href="">
               <svg class="client-icon">
                 <use href="./images/icons.svg#icon-client4">
                 </use>
@@ -343,7 +343,7 @@
             </a>
           </li>
             <li class="client-list-item"> 
-              <a class="client-link">
+              <a class="client-link" href="">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-client5">
                   </use>
@@ -351,7 +351,7 @@
               </a>
           </li>
           <li class="client-list-item">
-            <a class="client-link">
+            <a class="client-link" href="">
               <svg class="client-icon">
                 <use href="./images/icons.svg#icon-client6">
                 </use>
@@ -364,61 +364,66 @@
     </main>
     <footer class="footer">
       <div class="container">
-      <a href="" class="logo">Web<span class="footer-logo">Studio</span> </a>
-      <address class="address">
-        <ul class="footer-des">
-          <li class="footer-item">
-              <a
-                href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-                target="_blank"
-                class="footer-googlelink"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-          </li>
-          <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-info"
-                >info@devstudio.com</a
-              >
-          </li>
-          <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-info"
-                >+38 096 111 11 11</a
-              >
-          </li>
-        </ul>
-      </address>
-      </div>
-      <div class="container">
-          <h4 class="welcom">Присоеденяйтесь</h4>
-          <ul class="social">
-            <li class="social-item footer-social-icon">
-              <a class="social-link ">
-                <svg class="social-icon footer-icon">
-                  <use href="./images/icons.svg#icon-instagram">
-                  </use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item footer-social-icon"> <a class="social-link">
-              <svg class="social-icon footer-icon">
-                <use href="./images/icons.svg#icon-twitter">
-                </use>
-              </svg>
-            </a></li>
-            <li class="social-item footer-social-icon">
-              <a class="social-link">
-              <svg class="social-icon footer-icon">
-                <use href="./images/icons.svg#icon-facebook">
-                </use>
-              </svg>
-            </a></li>
-            <li class="social-item footer-social-icon"> <a class="social-link">
-              <svg class="social-icon footer-icon">
-                <use href="./images/icons.svg#icon-linkedin">
-                </use>
-              </svg>
-            </a></li>
-          </ul>
+
+        <div class="footer-div-second">
+            <div class="footer-left">
+            <a href="" class="logo">Web<span class="footer-logo">Studio</span> </a>
+            <address class="address">
+              <ul class="footer-des">
+                <li class="footer-item">
+                    <a
+                      href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                      target="_blank"
+                      class="footer-googlelink"
+                      >г. Киев, пр-т Леси Украинки, 26</a
+                    >
+                </li>
+                <li class="footer-item">
+                    <a href="mailto:info@devstudio.com" class="footer-info"
+                      >info@devstudio.com</a
+                    >
+                </li>
+                <li class="footer-item">
+                    <a href="tel:+380961111111" class="footer-info"
+                      >+38 096 111 11 11</a
+                    >
+                </li>
+              </ul>
+            </address>
+        </div>
+            <div class="footer-center">
+                <p class="welcom">Присоеденяйтесь</p>
+                <ul class="social">
+                  <li class="social-item footer-social-icon">
+                    <a class="social-link " href="">
+                      <svg class="social-icon footer-icon">
+                        <use href="./images/icons.svg#icon-instagram">
+                        </use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item footer-social-icon"> <a class="social-link" href="">
+                    <svg class="social-icon footer-icon">
+                      <use href="./images/icons.svg#icon-twitter">
+                      </use>
+                    </svg>
+                  </a></li>
+                  <li class="social-item footer-social-icon">
+                    <a class="social-link" href="">
+                    <svg class="social-icon footer-icon">
+                      <use href="./images/icons.svg#icon-facebook">
+                      </use>
+                    </svg>
+                  </a></li>
+                  <li class="social-item footer-social-icon"> <a class="social-link" href="">
+                    <svg class="social-icon footer-icon">
+                      <use href="./images/icons.svg#icon-linkedin">
+                      </use>
+                    </svg>
+                  </a></li>
+                </ul>
+            </div>
+          </div>
       </div>
   </footer>
   <script src="./js/modal.js"></script>
