--- a/portfolio.html
+++ b/portfolio.html
@@ -20,31 +20,31 @@
     <header class="header">
       <div class="container header-container">
         <nav class="nav">
-          <a href="" class="logo">Web<span class="logo2">Studio</span></a>
-        <ul class="header-list">
-          <li class="header-li"><a href="./index.html" class="header-link">Студия</a></li>
-          <li class="header-li">
-            <a href="./portfolio.html" class="header-link current">Портфолио </a>
+          <a href="" class="nav-logo">Web<span class="nav-logo2">Studio</span></a>
+        <ul class="site-nav">
+          <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a></li>
+          <li class="site-nav__item">
+            <a href="./portfolio.html" class="site-nav__link ">Портфолио </a>
           </li >
-          <li class="header-li"><a href="" class="header-link"> Контакты </a></li>
+          <li class="site-nav__item"><a href="" class="site-nav__link"> Контакты </a></li>
         </ul>
       </nav>
-      <ul class="contacts-list">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="contacts-link"> 
-            <svg class="mail" width="20" height="20">
-              <use href="./images/icons.svg#icon-mail"></use>
-            </svg>info@devstudio.com
-          </a>
-        </li >
-        <li class="item">
-          <a href="tel:+380961111111" class="contacts-link"
-            ><svg class="phone" width="20" height="20">
-              <use href="./images/icons.svg#icon-smartphone"></use>
-            </svg> +38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+        <ul class="contacts-list">
+          <li class="contacts-list__item">
+            <a href="mailto:info@devstudio.com" class="contacts-list__link"> 
+              <svg class="contacts-list__link--mail" width="20" height="20">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>info@devstudio.com
+            </a>
+          </li >
+          <li class="contacts-list__item">
+            <a href="tel:+380961111111" class="contacts-list__link"
+              ><svg class="contacts-list__link--phone" width="20" height="20">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg> +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
