--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
         <nav class="nav">
           <a href="" class="nav-logo">Web<span class="nav-logo2">Studio</span></a>
         <ul class="site-nav">
-          <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a></li>
+          <li class="site-nav__item"><a href="./index.html" class="site-nav__link ">Студия</a></li>
           <li class="site-nav__item">
-            <a href="./portfolio.html" class="site-nav__link ">Портфолио </a>
+            <a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио </a>
           </li >
           <li class="site-nav__item"><a href="" class="site-nav__link"> Контакты </a></li>
         </ul>
