--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
       </section>
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-          <button data-modal-close class="close-menu">Закрыть окно</button>
+          <button data-modal-close class="close-menu">
+            <svg class="icon-close-form">
+              <use href="./images/icons.svg#icon-close " width="11" height="11">
+              </use>
+            </svg>
+          </button>
         </div>
       </div>
       
