--- a/portfolio.html
+++ b/portfolio.html
@@ -206,62 +206,67 @@
       </main>
       <footer class="footer">
         <div class="container">
-        <a href="" class="logo">Web<span class="footer-logo">Studio</span> </a>
-        <address class="address">
-          <ul class="footer-des">
-            <li class="footer-item">
-                <a
-                  href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-                  target="_blank"
-                  class="footer-googlelink"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
-            </li>
-            <li class="footer-item">
-                <a href="mailto:info@devstudio.com" class="footer-info"
-                  >info@devstudio.com</a
-                >
-            </li>
-            <li class="footer-item">
-                <a href="tel:+380961111111" class="footer-info"
-                  >+38 096 111 11 11</a
-                >
-            </li>
-          </ul> 
-        </address>
+  
+          <div class="footer-div-second">
+              <div class="footer-left">
+              <a href="" class="logo">Web<span class="footer-logo">Studio</span> </a>
+              <address class="address">
+                <ul class="footer-des">
+                  <li class="footer-item">
+                      <a
+                        href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                        target="_blank"
+                        class="footer-googlelink"
+                        >г. Киев, пр-т Леси Украинки, 26</a
+                      >
+                  </li>
+                  <li class="footer-item">
+                      <a href="mailto:info@devstudio.com" class="footer-info"
+                        >info@devstudio.com</a
+                      >
+                  </li>
+                  <li class="footer-item">
+                      <a href="tel:+380961111111" class="footer-info"
+                        >+38 096 111 11 11</a
+                      >
+                  </li>
+                </ul>
+              </address>
+          </div>
+              <div class="footer-center">
+                  <p class="welcom">Присоеденяйтесь</p>
+                  <ul class="social">
+                    <li class="social-item footer-social-icon">
+                      <a class="social-link " href="">
+                        <svg class="social-icon footer-icon">
+                          <use href="./images/icons.svg#icon-instagram">
+                          </use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-item footer-social-icon"> <a class="social-link" href="">
+                      <svg class="social-icon footer-icon">
+                        <use href="./images/icons.svg#icon-twitter">
+                        </use>
+                      </svg>
+                    </a></li>
+                    <li class="social-item footer-social-icon">
+                      <a class="social-link" href="">
+                      <svg class="social-icon footer-icon">
+                        <use href="./images/icons.svg#icon-facebook">
+                        </use>
+                      </svg>
+                    </a></li>
+                    <li class="social-item footer-social-icon"> <a class="social-link" href="">
+                      <svg class="social-icon footer-icon">
+                        <use href="./images/icons.svg#icon-linkedin">
+                        </use>
+                      </svg>
+                    </a></li>
+                  </ul>
+              </div>
+            </div>
         </div>
-        <div class="container">
-          <h4 class="welcom">Присоеденяйтесь</h4>
-          <ul class="social">
-            <li class="social-item footer-social-icon">
-              <a class="social-link ">
-                <svg class="social-icon footer-icon">
-                  <use href="./images/icons.svg#icon-instagram">
-                  </use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item footer-social-icon"> <a class="social-link">
-              <svg class="social-icon footer-icon">
-                <use href="./images/icons.svg#icon-twitter">
-                </use>
-              </svg>
-            </a></li>
-            <li class="social-item footer-social-icon">
-              <a class="social-link">
-              <svg class="social-icon footer-icon">
-                <use href="./images/icons.svg#icon-facebook">
-                </use>
-              </svg>
-            </a></li>
-            <li class="social-item footer-social-icon"> <a class="social-link">
-              <svg class="social-icon footer-icon">
-                <use href="./images/icons.svg#icon-linkedin">
-                </use>
-              </svg>
-            </a></li>
-          </ul>
-      </div>
     </footer>
   </body>
 </html>
